# loratube_firmware

./: CMakeLists.txt
firmware_skeleton_espidf/: CMakeLists.txt  README.md
firmware_skeleton_espidf/main/: API_measure.c  API_measure.h  API_radio.c  API_radio.h  CMakeLists.txt  app_main.c  initialisation.c  initialisation.h  module_dummy_radio.c  module_dummy_radio.h  module_dummy_sensor.c  module_dummy_sensor.h  system_cfg.c  system_cfg.h  system_config.h  system_faults.h  system_irq.h  system_queues.c  system_queues.h  system_state.c  system_state.h  system_types.h  task_measure.c  task_measure.h  task_radio.c  task_radio.h  test_selftest.c  test_selftest.h
main/: API_display.c  API_display.h  CMakeLists.txt  initialisation.c  initialisation.h  main.c  module_i2c_bus.c  module_i2c_bus.h  system_cfg.c  system_cfg.h  system_config.h  system_faults.c  system_faults.h  system_irq.c  system_queues.c  system_queues.h  system_state.h  system_sync.c  system_sync.h  system_types.h  task_log.c  task_log.h
